--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^0.5.18",
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-easy-grid": "^0.1.7",
     "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
