--- a/ios/fiftytwofitness/Info.plist
+++ b/ios/fiftytwofitness/Info.plist
@@ -46,6 +46,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>CardCharacters.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
